# nanowork

./: .env.example  .gitignore  AGENTS.MD  AGENTTYPE_ERROR_RESOLUTION.md  APPLY_SCHEMA_MIGRATION.md  ARCHITECTURE.md  ARR_DISPLAY_DESIGN.md  BUGFIX_BLACK_SCREEN.md  BUILD_CREATION_SOLUTION.md  BUN_MIGRATION.md  BUSINESS_DETAIL_VIEW.md  CLAIM_BUSINESS_FLOW.md  CLAUDE.MD  CLOUDFLARE_DEPLOYMENT.md  COMPANY_SHOWCASE_DESIGN.md  COMPLETE_DIFF_REVIEW.md  CONTRIBUTING.md  DATABASE_FIX_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  EMERGENCY_SCHEMA_APPLY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MARKETPLACE_QUICK_START.md  Makefile  ONBOARDING_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  RENDER_DEBUG_PROMPT.md  RENDER_FIX.md  RENDER_SETUP.md  RULES.md  SHOWCASE_VARIANTS.md  SPLIT-SUMMARY.md  SPREADSHEETS_IMPLEMENTATION.md  SPREADSHEETS_QUICKSTART.md  SPREADSHEET_ENHANCEMENTS.md  SPREADSHEET_FINAL_REPORT.md  SPREADSHEET_TEST_REPORT.md  (+30 more)
apps/api/: .env.example  Dockerfile  NEXTJS_INTEGRATION.md  README.md  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  AGENT_AUTO_PROVISION_CHANGES.md  AGENT_PROVISIONING.md  BACKEND_FEATURES.md  BUILD_TROUBLESHOOTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_START.md  SUPABASE_SETUP.md  VALIDATION_IMPLEMENTATION.md  package-lock.json  package.json  pyproject.toml  render.yaml  supabase-schema.sql  test-api.sh  test-auto-provision.mjs  test-simple.sh  tsconfig.tsbuildinfo
backend/db/: SCHEMA_MIGRATION.md  schema.sql  verify-schema.sql
(+657 files in other folders)
