[project]
name = "nanowork-backend"
version = "0.1.0"
description = "FastAPI backend for nanowork AI platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[dependency-groups]
dev = ["pytest", "httpx", "pytest-asyncio"]
